--- a/APP.CMS/Views/Role/Update.cshtml
+++ b/APP.CMS/Views/Role/Update.cshtml
@@ -7,7 +7,7 @@
         <div class="row">
             <label class="col-sm-2 col-md-2 col-6" required>Tên nhóm quyền</label>
             <div class="col-sm-4 col-md-4 col-12">
-                <input value="@Model.Name" type="text" required class="form-control" id="txtName" placeholder="Tên menu">
+                <input value="@Model.Name" type="text" required class="form-control" id="txtName" placeholder="Tên nhóm quyền">
             </div>
         </div>
     </div>
