--- a/APP.CMS/Views/MotorTypes/_Update.cshtml
+++ b/APP.CMS/Views/MotorTypes/_Update.cshtml
@@ -1,7 +1,7 @@
 ﻿@model APP.MODELS.MotorTypes
 @using Portal.Utils
 <div id="frmUpdate" class="form-horizontal">
-    <input hidden id="hdId" value="@Model.Id" />
+    <input hidden id="txtId" value="@Model.Id" />
     <div class="form-group">
         <div class="row">
             <label class="col-sm-3 col-md-3 col-6" required>Tên loại xe</label>
