--- a/APP.CMS/Views/Shared/_Layout.cshtml
+++ b/APP.CMS/Views/Shared/_Layout.cshtml
@@ -73,16 +73,12 @@
     <div class="wrapper">
         @Html.Partial("_Navbar")
         @Html.Partial("_SideBar")
-        <div class="content-wrapper">
+        <div class="content-wrapper bg-white">
             <section class="content-header">
                 <div class="container-fluid">
                     <div class="row mb-2">
-                        <div class="col-sm-6">
-                            <h1>@ViewBag.Title</h1>
-                        </div>
-                        <div class="col-sm-6">
-                            <ol class="breadcrumb float-sm-right">
-                            </ol>
+                        <div class="col-sm-12">
+                            <h1 style="text-align:center;">@ViewBag.Title</h1>
                         </div>
                     </div>
                 </div>
