--- a/APP.CMS/Views/TemporaryBill/Create.cshtml
+++ b/APP.CMS/Views/TemporaryBill/Create.cshtml
@@ -3,73 +3,259 @@
     ViewData["Title"] = "Phiếu tạm tính";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 @using APP.MODELS
 @using Portal.Utils;
-    <div id="frmCreate" class="form-horizontal row ">
-        <div class="form-group">
-            <div class="row d-flex justify-content-center">
-                <label class="col-sm-2 col-md-2 col-4">Khách hàng</label>
-                <select id="drCustomer" class="form-control col-sm-4 col-md-4 col-8">
-                    @{
-                        var listCustomer = ViewData["listCustomer"] as List<APP.MODELS.Customers>;
-                        if (listCustomer != null)
-                        {
-                            <option value="0">Chọn</option>
-                            foreach (var i in listCustomer)
+<link href="~/css/Billcss.css" rel="stylesheet"/>
+@{ 
+    if((int)ViewData[nameof(PermissionEnum.Create)] == 0)
+    {
+        Url.Action("Index", "Home");
+    }
+}
+<div id="frmCreate" class="form-horizontal border border-dark">
+    <div class="border-bottom border-dark">
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-6 col-md-6 col-12 pl-4 border-right border-dark">
+                <div class="row align-items-center p-2">
+                    <label required class="col-md-3">Khách hàng: </label>
+                    <select required id="drCustomer" class="form-control col-md-6">
+                        @{
+                            var listCustomer = ViewData["listCustomer"] as List<APP.MODELS.Customers>;
+                            if (listCustomer != null)
                             {
-                                <option value="@i.Id">
-                                    @i.Name
-                                </option>
+                                <option value="0">Chọn</option>
+                                foreach (var i in listCustomer)
+                                {
+                                    <option value="@i.Id">
+                                        @i.Name
+                                    </option>
+                                }
                             }
                         }
-                    }
-                </select>
-                <label class="col-sm-2 col-md-2 col-4">Loại xe</label>
-                <select id="drMotorType" class="form-control col-sm-4 col-md-4 col-8">
-                    @{
-                        var listMotorType = ViewData["listMotorType"] as List<APP.MODELS.MotorTypes>;
-                        if (listMotorType != null)
-                        {
-                            <option value="0">Chọn</option>
-                            foreach (var i in listMotorType)
-                            {
-                                <option value="@i.Id">
-                                    @i.Name
-                                </option>
-                            }
-                        }
-                    }
-                </select>
+                    </select>
+                    <a class="h-100 ml-2" onclick="openCreateCustomer()" href="javascript:;"><i class="fas fa-plus-circle"></i></a>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="row d-flex justify-content-center">
-                <label class="col-sm-2 col-md-2 col-4">Quầy sửa</label>
-                <select id="drMotorLift" class="form-control col-sm-4 col-md-4 col-8">
-                    @{
-                        var listMotorLift = ViewData["listMotorLift"] as List<APP.MODELS.MotorLifts>;
-                        if (listMotorLift != null)
-                        {
-                            <option value="0">Chọn</option>
-                            foreach (var i in listMotorLift)
+            <div class="col-sm-6 col-md-6 col-12 pl-4">
+                <div class="row align-items-center p-2">
+                    <label required class="mr-1">Loại xe: </label>
+                    <select required id="drMotorType" class="form-control col-md-6">
+                        @{
+                            var listMotorType = ViewData["listMotorType"] as List<APP.MODELS.MotorTypes>;
+                            if (listMotorType != null)
                             {
-                                <option value="@i.Id">
-                                    @i.Name
-                                </option>
+                                <option value="0">Chọn</option>
+                                foreach (var i in listMotorType)
+                                {
+                                    <option value="@i.Id">
+                                        @i.Name
+                                    </option>
+                                }
                             }
                         }
-                    }
-                </select>
-                <label class="col-sm-2 col-md-2 col-4">Giờ vào</label>
-                @{
-                    string txtTimeIn = ViewData["timeIn"] as string;
-                }
-                <label id="txtTimeIn" class="col-sm-4 col-md-4 col-4">@txtTimeIn</label>
+                    </select>
+                    <a class="h-100 ml-2" onclick="openCreateMTType()" href="javascript:;"><i class="fas fa-plus-circle"></i></a>
+                </div>
             </div>
         </div>
     </div>
-<div class="form-horizontal">
+    <div class="border-bottom border-dark">
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-6 col-md-6 col-12 pl-4 border-right border-dark">
+                <div class="row align-items-center p-2">
+                    <label required class="col-md-3">Quầy sửa: </label>
+                    <select required id="drMotorLift" class="form-control col-md-6">
+                        @{
+                            var listMotorLift = ViewData["listMotorLift"] as List<APP.MODELS.MotorLifts>;
+                            if (listMotorLift != null)
+                            {
+                                <option value="0">Chọn</option>
+                                foreach (var i in listMotorLift)
+                                {
+                                    <option value="@i.Id">
+                                        @i.Name
+                                    </option>
+                                }
+                            }
+                        }
+                    </select>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-6 col-12 pl-4">
+                <div class="row align-items-center p-2">
+                    <label class="mr-1">Giờ vào: </label>
+                    @{
+                        string txtTimeIn = ViewData["timeIn"] as string;
+                    }
+                    <label id="txtTimeIn">@txtTimeIn</label>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="border-bottom border-dark">
+        <div class="row">
+            <div class="col-sm-6 col-md-6 col-12 pl-4">
+                <div class="row align-items-center p-2">
+                    <label class="col-md-3">Dịch vụ: </label>
+                    <select id="drServices" class="form-control col-md-6">
+                        @{
+                            var listServices = ViewData["listServices"] as List<APP.MODELS.Services>;
+                            if (listServices != null)
+                            {
+                                <option value="0">Chọn</option>
+                                foreach (var i in listServices)
+                                {
+                                    <option value="@i.Id">
+                                        @i.Name
+                                    </option>
+                                }
+                            }
+                        }
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div>
+            <table id="listService" class="table table-bordered table-hover mb-0">
+                <thead>
+                    <tr>
+                        <th style="width:10%">#</th>
+                        <th style="width:40%">Tên dịch vụ</th>
+                        <th style="width:10%">Mã dịch vụ</th>
+                        <th style="width:20%">Đơn giá</th>
+                        <th style="width:20%">Thành tiền</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+
+            </table>
+        </div>
+    </div>
+    <div class="border-bottom border-dark">
+        <div class="row">
+            <div class="col-sm-6 col-md-6 col-12 pl-4">
+                <div class="row align-items-center p-2">
+                    <label class="col-md-3">Phụ tùng: </label>
+                    <select id="drAccessories" class="form-control col-md-6">
+                        @{
+                            var listAccessories = ViewData["listAccessories"] as List<APP.MODELS.Accessories>;
+                            if (listAccessories != null)
+                            {
+                                <option value="0">Chọn</option>
+                                foreach (var i in listAccessories)
+                                {
+                                    <option value="@i.Id">
+                                        @i.Name
+                                    </option>
+                                }
+                            }
+                        }
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div>
+            <table id="listAccessories" class="table table-bordered table-hover mb-0">
+                <thead>
+                    <tr>
+                        <th style="width:10%">#</th>
+                        <th style="width:30%">Tên phụ tùng</th>
+                        <th style="width:10%">Mã dịch vụ</th>
+                        <th style="width:10%">Đơn giá</th>
+                        <th style="width:10%">Số lượng</th>
+                        <th style="width:10%">ĐVT</th>
+                        <th style="width:20%">Thành tiền</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="border-bottom border-dark">
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-12 col-md-12 col-12 pl-4">
+                <div class="row align-items-center p-2">
+                    <label class="col-md-1">Ghi chú: </label>
+                    <input type="text" id="txtNote" class="form-control col-md-11" />
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="border-bottom border-dark">
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-6 col-md-6 col-12 pl-4 border-right border-dark">
+                <div class="row align-items-center p-2">
+                    <label class="col-md-3">Lễ tân: </label>
+                    @{
+                        var account = ViewData["txtCreatedBy"] as APP.MODELS.Accounts;
+                    }
+                    <input readonly type="text" value="@account.EmployeeName" />
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-6 col-12 pl-4">
+                <div class="row align-items-center p-2">
+                    <label required class="mr-1">Kỹ thuật viên: </label>
+                    <select required id="drKTV" class="form-control col-md-6">
+                        @{
+                            var listKTVien = ViewData["listKTVien"] as List<APP.MODELS.Accounts>;
+                            if (listKTVien != null)
+                            {
+                                <option value="0">Chọn</option>
+                                foreach (var i in listKTVien)
+                                {
+                                    <option value="@i.Id">
+                                        @i.EmployeeName
+                                    </option>
+                                }
+                            }
+                        }
+                    </select>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="border-bottom border-dark">
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-6 col-md-6 col-12 pl-4 border-right border-dark">
+                @*<div class="row align-items-center p-2">
+                    <label class="col-md-3">Lễ tân: </label>
+                    @{
+                        var account = ViewData["txtCreatedBy"] as APP.MODELS.Accounts;
+                    }
+                    <input readonly type="text" value="@account.EmployeeName" />
+                </div>*@
+            </div>
+            <div class="col-sm-6 col-md-6 col-12 pl-4">
+                @*<div class="row align-items-center p-2">
+                    <label required class="mr-1">Kỹ thuật viên: </label>
+                    <select required id="drKTV" class="form-control col-md-6">
+                        @{
+                            var listKTVien = ViewData["listKTVien"] as List<APP.MODELS.Accounts>;
+                            if (listKTVien != null)
+                            {
+                                <option value="0">Chọn</option>
+                                foreach (var i in listKTVien)
+                                {
+                                    <option value="@i.Id">
+                                        @i.EmployeeName
+                                    </option>
+                                }
+                            }
+                        }
+                    </select>
+                </div>*@
+                <div class="float-right">
+                    <label>Tổng tiền: </label>
+                    <label id="txtTongTien" class="mr-1" > 0 VNĐ </label>
+                </div>
+                 
+            </div>
+        </div>
+    </div>
+</div>
+<div class="form-horizontal mt-2">
     <div class="d-flex justify-content-center">
         <button class="btn btn-danger mr-1" id="btnExist">Trở về</button> <button class="btn btn-success" id="btnCreate">Lưu</button>
     </div>
