--- a/APP.CMS/Views/Bill/View.cshtml
+++ b/APP.CMS/Views/Bill/View.cshtml
@@ -75,7 +75,7 @@
             <table id="listService" class="table table-bordered table-hover mb-0">
                 <thead>
                     <tr>
-                        <th style="width:10%">#</th>
+                        <th style="width:10%">STT</th>
                         <th style="width:40%">Tên dịch vụ</th>
                         <th style="width:10%">Mã dịch vụ</th>
                         <th style="width:20%">Đơn giá</th>
@@ -87,23 +87,25 @@
                         var listServicesCreated = ViewData["listServicesCreated"] as List<APP.MODELS.TemporaryBill_Service>;
                         if (listServicesCreated != null)
                         {
-                            foreach (var i in listServicesCreated)
+
+                            for (int i = 0; i < listServicesCreated.Count(); i++)
                             {
+                                var item = listServicesCreated[i];
                                 <tr>
                                     <td style="width:10%;text-align:center;">
-                                        <a class="SerXoa" href="javascript:;"><i class="fas fa-trash-alt"></i></a>
+                                        @(i+1)
                                     </td>
                                     <td style="width:40%">
-                                        @i.ServiceName
+                                        @item.ServiceName
                                     </td>
                                     <td class="serviceId" style="width:10%">
-                                        @i.ServiceId
+                                        @item.ServiceId
                                     </td>
                                     <td class="servicePrice" style="width:20%">
-                                        @decimal.Truncate(i.ServicePrice.Value) VNĐ
+                                        @decimal.Truncate(item.ServicePrice.Value) VNĐ
                                     </td>
                                     <td class="TongTien" style="width:20%">
-                                        @decimal.Truncate(i.ServicePrice.Value) VNĐ
+                                        @decimal.Truncate(item.ServicePrice.Value) VNĐ
                                     </td>
                                 </tr>
                             }
@@ -141,11 +143,12 @@
                         var listAccessoriesCreated = ViewData["listAccessoriesCreated"] as List<APP.MODELS.TemporaryBill_Accesary>;
                         if (listAccessoriesCreated.Count() > 0)
                         {
-                            foreach (var i in listAccessoriesCreated)
+                            for (int item = 0; item < listAccessoriesCreated.Count(); item++)
                             {
+                                var i = listAccessoriesCreated[item];
                                 <tr>
                                     <td style="width:10%;text-align:center;">
-                                        <a class="AccXoa" href="javascript:;"><i class="fas fa-trash-alt"></i></a>
+                                        @(item+1)
                                     </td>
                                     <td style="width:30%">
                                         @i.AccesaryName
@@ -262,8 +265,9 @@
         $('.TongTien').each(function () {
             TongTien = TongTien + parseInt($(this).text().replace("VNĐ", "").trim());
         });
+        TongTien = new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(TongTien).replace("₫", "").trim();
         $('#txtTongTien').text('');
-        $('#txtTongTien').text(TongTien + " VNĐ");
+        $('#txtTongTien').text(TongTien+" VNĐ");
     }
 </script>
 
