--- a/APP.CMS/Views/MotorTypes/Index.cshtml
+++ b/APP.CMS/Views/MotorTypes/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using APP.MODELS
 @using Portal.Utils;
 @{
+    ViewData["Title"] = "Danh sách loại xe";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
