--- a/APP.CMS/Views/JobPositions/Index.cshtml
+++ b/APP.CMS/Views/JobPositions/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Portal.Utils;
 @{
+    ViewData["Title"] = "Danh sách vị trí công việc";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
