--- a/APP.CMS/Views/Menu/Index.cshtml
+++ b/APP.CMS/Views/Menu/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using APP.MODELS
 @using Portal.Utils;
 @{
+    ViewData["Title"] = "Danh sách chức năng";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
