--- a/APP.CMS/Views/Services/_Create.cshtml
+++ b/APP.CMS/Views/Services/_Create.cshtml
@@ -12,7 +12,7 @@
         <div class="row">
             <label class="col-sm-3 col-md-3 col-6" required>Giá</label>
             <div class="col-sm-7 col-md-7 col-12">
-                <input type="number" step="1" required class="form-control" id="txtPrice" placeholder="Giá">
+                <input type="number" step="1" min="0" required class="form-control" id="txtPrice" placeholder="Giá">
             </div>
         </div>
     </div>
